--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t bkhbea/react-test -t ./client/Dockerfile.dev ./client
+  - docker build -t bkhbea/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run bkhbea/react-test npm test -- --coverage
